# EyeKart

./: .clang-format  .gitignore  CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.overlay  xiao_ble_nrf52840.overlay
dts/: servos.dtsi
src/: ICM20948.c  ICM20948.h  angle_servo.c  angle_servo.h  bt_central.c  bt_central.h  bt_peripheral.c  bt_peripheral.h  button_control.c  button_control.h  camera.c  camera.h  gimbal.c  gimbal.h  led_control.c  led_control.h  madgwick.c  madgwick.h  main.c  main_servo.c  servo.c  servo.h
